concated KRK_BIELANY

--- a/main.ipynb
+++ b/main.ipynb
@@ -32,7 +32,6 @@
     "import time\n",
     "import zipfile\n",
     "from glob import glob\n",
-    "\n",
     "import pandas as pd"
    ],
    "metadata": {
@@ -107,18 +106,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "DataFrame.__init__() got an unexpected keyword argument 'names'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Input \u001B[0;32mIn [10]\u001B[0m, in \u001B[0;36m<cell line: 14>\u001B[0;34m()\u001B[0m\n\u001B[1;32m      1\u001B[0m start_time \u001B[38;5;241m=\u001B[39m time\u001B[38;5;241m.\u001B[39mtime()\n\u001B[1;32m      2\u001B[0m codz_names \u001B[38;5;241m=\u001B[39m (\n\u001B[1;32m      3\u001B[0m                 \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mKod stacji\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[1;32m      4\u001B[0m                 \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mNazwa stacji\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     12\u001B[0m                 \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mMiesiąc kalendarzowy\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[1;32m     13\u001B[0m             )\n\u001B[0;32m---> 14\u001B[0m KRK_BIELANY \u001B[38;5;241m=\u001B[39m \u001B[43mpd\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mDataFrame\u001B[49m\u001B[43m(\u001B[49m\u001B[43mnames\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mcodz_names\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     15\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m file \u001B[38;5;129;01min\u001B[39;00m unpack(zip_files):\n\u001B[1;32m     16\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m/codz_\u001B[39m\u001B[38;5;124m'\u001B[39m \u001B[38;5;129;01min\u001B[39;00m file:\n",
-      "\u001B[0;31mTypeError\u001B[0m: DataFrame.__init__() got an unexpected keyword argument 'names'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution time: 2.1136205196380615 s\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "              Nazwa stacji Nazwa rzeki/jeziora  Rok hydrologiczny  \\\nKod stacji                                                          \n150190340   KRAKÓW-BIELANY           Wisła (2)               2016   \n150190340   KRAKÓW-BIELANY           Wisła (2)               2016   \n150190340   KRAKÓW-BIELANY           Wisła (2)               2016   \n150190340   KRAKÓW-BIELANY           Wisła (2)               2016   \n150190340   KRAKÓW-BIELANY           Wisła (2)               2016   \n...                    ...                 ...                ...   \n150190340   KRAKÓW-BIELANY           Wisła (2)               2018   \n150190340   KRAKÓW-BIELANY           Wisła (2)               2018   \n150190340   KRAKÓW-BIELANY           Wisła (2)               2018   \n150190340   KRAKÓW-BIELANY           Wisła (2)               2018   \n150190340   KRAKÓW-BIELANY           Wisła (2)               2018   \n\n            Wskaźnik miesiąca w roku hydrologicznym  Dzień  Stan wody [cm]  \\\nKod stacji                                                                   \n150190340                                         1      1             148   \n150190340                                         1      2             147   \n150190340                                         1      3             145   \n150190340                                         1      4             134   \n150190340                                         1      5             126   \n...                                             ...    ...             ...   \n150190340                                        12     27             149   \n150190340                                        12     28             157   \n150190340                                        12     29             165   \n150190340                                        12     30             150   \n150190340                                        12     31             145   \n\n            Przepływ [m^3/s]  Temperatura wody [st. C]  Miesiąc kalendarzowy  \nKod stacji                                                                    \n150190340          99999.999                      99.9                    11  \n150190340          99999.999                      99.9                    11  \n150190340          99999.999                      99.9                    11  \n150190340          99999.999                      99.9                    11  \n150190340          99999.999                      99.9                    11  \n...                      ...                       ...                   ...  \n150190340          99999.999                      99.9                    10  \n150190340          99999.999                      99.9                    10  \n150190340          99999.999                      99.9                    10  \n150190340          99999.999                      99.9                    10  \n150190340          99999.999                      99.9                    10  \n\n[1096 rows x 9 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Nazwa stacji</th>\n      <th>Nazwa rzeki/jeziora</th>\n      <th>Rok hydrologiczny</th>\n      <th>Wskaźnik miesiąca w roku hydrologicznym</th>\n      <th>Dzień</th>\n      <th>Stan wody [cm]</th>\n      <th>Przepływ [m^3/s]</th>\n      <th>Temperatura wody [st. C]</th>\n      <th>Miesiąc kalendarzowy</th>\n    </tr>\n    <tr>\n      <th>Kod stacji</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>150190340</th>\n      <td>KRAKÓW-BIELANY</td>\n      <td>Wisła (2)</td>\n      <td>2016</td>\n      <td>1</td>\n      <td>1</td>\n      <td>148</td>\n      <td>99999.999</td>\n      <td>99.9</td>\n      <td>11</td>\n    </tr>\n    <tr>\n      <th>150190340</th>\n      <td>KRAKÓW-BIELANY</td>\n      <td>Wisła (2)</td>\n      <td>2016</td>\n      <td>1</td>\n      <td>2</td>\n      <td>147</td>\n      <td>99999.999</td>\n      <td>99.9</td>\n      <td>11</td>\n    </tr>\n    <tr>\n      <th>150190340</th>\n      <td>KRAKÓW-BIELANY</td>\n      <td>Wisła (2)</td>\n      <td>2016</td>\n      <td>1</td>\n      <td>3</td>\n      <td>145</td>\n      <td>99999.999</td>\n      <td>99.9</td>\n      <td>11</td>\n    </tr>\n    <tr>\n      <th>150190340</th>\n      <td>KRAKÓW-BIELANY</td>\n      <td>Wisła (2)</td>\n      <td>2016</td>\n      <td>1</td>\n      <td>4</td>\n      <td>134</td>\n      <td>99999.999</td>\n      <td>99.9</td>\n      <td>11</td>\n    </tr>\n    <tr>\n      <th>150190340</th>\n      <td>KRAKÓW-BIELANY</td>\n      <td>Wisła (2)</td>\n      <td>2016</td>\n      <td>1</td>\n      <td>5</td>\n      <td>126</td>\n      <td>99999.999</td>\n      <td>99.9</td>\n      <td>11</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>150190340</th>\n      <td>KRAKÓW-BIELANY</td>\n      <td>Wisła (2)</td>\n      <td>2018</td>\n      <td>12</td>\n      <td>27</td>\n      <td>149</td>\n      <td>99999.999</td>\n      <td>99.9</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>150190340</th>\n      <td>KRAKÓW-BIELANY</td>\n      <td>Wisła (2)</td>\n      <td>2018</td>\n      <td>12</td>\n      <td>28</td>\n      <td>157</td>\n      <td>99999.999</td>\n      <td>99.9</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>150190340</th>\n      <td>KRAKÓW-BIELANY</td>\n      <td>Wisła (2)</td>\n      <td>2018</td>\n      <td>12</td>\n      <td>29</td>\n      <td>165</td>\n      <td>99999.999</td>\n      <td>99.9</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>150190340</th>\n      <td>KRAKÓW-BIELANY</td>\n      <td>Wisła (2)</td>\n      <td>2018</td>\n      <td>12</td>\n      <td>30</td>\n      <td>150</td>\n      <td>99999.999</td>\n      <td>99.9</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>150190340</th>\n      <td>KRAKÓW-BIELANY</td>\n      <td>Wisła (2)</td>\n      <td>2018</td>\n      <td>12</td>\n      <td>31</td>\n      <td>145</td>\n      <td>99999.999</td>\n      <td>99.9</td>\n      <td>10</td>\n    </tr>\n  </tbody>\n</table>\n<p>1096 rows × 9 columns</p>\n</div>"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -148,34 +152,32 @@
     "            'Procent udziału zjawiska lodowego / 10',\n",
     "            'Kod zarastania'\n",
     ")\n",
-    "\n",
+    "KRK_BIELANY = pd.DataFrame()\n",
     "for file in unpack(zip_files):\n",
-    "    if '/codz_' in file:\n",
+    "    if 'codz_' in file:\n",
     "        df = pd.read_csv(\n",
     "            file,\n",
     "            encoding='windows-1250',\n",
     "            index_col='Kod stacji',\n",
     "            names=codz_names\n",
     "        )\n",
-    "\n",
     "        krk_bielany = df[df['Nazwa stacji'] == 'KRAKÓW-BIELANY']\n",
-    "        df_list += krk_bielany\n",
+    "        KRK_BIELANY = pd.concat([KRK_BIELANY, krk_bielany])\n",
+    "print(f'execution time: {time.time() - start_time} s')\n",
+    "KRK_BIELANY\n",
     "\n",
     "# value 9999 in df['Stan wody'] = NaN\n",
     "# value 99.9 in df['Temperatura wody [st. C]'] = NaN\n",
     "# value 99999.999 in df['Przepływ [m^3/s]'] = NaN\n",
     "\n",
-    "KRK_BIELANY = pd.concat(krk_bielany, ignore_index=True, sort=False)\n",
-    "\n",
-    "# elif '/zjaw_' in file:\n",
-    "#     df = pd.read_csv(\n",
-    "#         file,\n",
-    "#         encoding='windows-1250',\n",
-    "#         index_col='Kod stacji',\n",
-    "#         names=zjaw_names\n",
-    "#     )\n",
-    "\n",
-    "print(f'execution time: {time.time() - start_time} s')"
+    "    # elif 'zjaw_' in file:\n",
+    "    #     continue\n",
+    "    #     df = pd.read_csv(\n",
+    "    #         file,\n",
+    "    #         encoding='windows-1250',\n",
+    "    #         index_col='Kod stacji',\n",
+    "    #         names=zjaw_names\n",
+    "    #     )"
    ],
    "metadata": {
     "collapsed": false,
