water level plot

--- a/main.ipynb
+++ b/main.ipynb
@@ -113,7 +113,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "execution time: 2.0134596824645996 s\n"
+      "execution time: 1.9571564197540283 s\n"
      ]
     },
     {
@@ -206,17 +206,16 @@
     }
    ],
    "source": [
-    "fig1 = plt.figure(figsize=(10, 6), dpi=300, facecolor='#ffffff')\n",
-    "plt.errorbar(\n",
-    "    x=KRK_BIELANY['Data'],\n",
-    "    y=KRK_BIELANY['Stan wody [cm]'],\n",
-    "    fmt='-'\n",
+    "fig1 = plt.figure(figsize=(10, 6), dpi=100, facecolor='#ffffff')\n",
+    "plt.plot(\n",
+    "    KRK_BIELANY['Data'],\n",
+    "    KRK_BIELANY['Stan wody [cm]'],\n",
     ")\n",
     "plt.title('Poziom wody w Wiśle w latach 2016-2018 (stacja Kraków-Bielany)', fontdict={'fontsize':18})\n",
     "plt.ylabel('Poziom wody [cm]', fontdict={'fontsize':14}, labelpad=30)\n",
     "plt.xlabel('Data', fontdict={'fontsize':14}, labelpad=30)\n",
     "plt.xticks(KRK_BIELANY['Data'][::90], rotation=90)\n",
-    "plt.savefig('output/fig1.png')\n",
+    "plt.savefig('output/fig1.png', bbox_inches='tight')\n",
     "plt.show()\n",
     "plt.close(fig1)"
    ],
