--- a/main.ipynb
+++ b/main.ipynb
@@ -45,8 +45,8 @@
    ],
    "source": [
     "data_dir = 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe'\n",
-    "zip_files = glob(f'{data_dir}/*/*.zip')     # list of .zip files\n",
-    "zip_files[:5]                               # first five elements"
+    "zip_files = glob(f'{data_dir}/*/*.zip')  # list of .zip files\n",
+    "zip_files[:5]  # first five elements"
    ],
    "metadata": {
     "collapsed": false,
@@ -76,11 +76,12 @@
     "def unpack(files: list) -> list:\n",
     "    \"\"\"Unpacks given file list in the same parent dir.\n",
     "    Returns list of unpacked files.\"\"\"\n",
+    "\n",
     "    for file in files:\n",
     "        with zipfile.ZipFile(file) as zip_file:\n",
     "            zip_file.extractall(file[:77])\n",
     "\n",
-    "    csv_files = glob(f'{data_dir}/*/*.csv')     # list of .csv files\n",
+    "    csv_files = glob(f'{data_dir}/*/*.csv')  # list of .csv files\n",
     "\n",
     "    return sorted(csv_files)"
    ],
@@ -123,7 +124,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "execution time: 52.7548406124115 s\n"
+      "execution time: 52.51819729804993 s\n"
      ]
     }
    ],
@@ -246,14 +247,15 @@
     "def plot_wlevel(station: str):\n",
     "    \"\"\"Draws formatted plot of water level in time.\"\"\"\n",
     "\n",
-    "    df = date_creator(DF[station])    # Tabel with data from KRAKÓW-BIELANY station\n",
+    "    df = date_creator(DF[station])  # Tabel with data from KRAKÓW-BIELANY station\n",
     "\n",
     "    fig = plt.figure(figsize=(10, 4), dpi=300, facecolor='#ffffff')\n",
     "    plt.plot(\n",
     "        df['Data hydrologiczna'],\n",
     "        df['Stan wody [cm]'],\n",
     "    )\n",
-    "    plt.title(f'Poziom wody w Wiśle w latach hydrologicznych 2016-2018 (stacja {df[\"Nazwa stacji\"][0]})', fontdict={'fontsize': 18}, pad=30)\n",
+    "    plt.title(f'Poziom wody w Wiśle w latach hydrologicznych 2016-2018 (stacja {df[\"Nazwa stacji\"][0]})',\n",
+    "              fontdict={'fontsize': 18}, pad=30)\n",
     "    plt.ylabel('Poziom wody [cm]', fontdict={'fontsize': 14}, labelpad=30)\n",
     "    plt.xlabel('Data hydrologiczna', fontdict={'fontsize': 14}, labelpad=30)\n",
     "    plt.xticks(df['Data hydrologiczna'][::90], rotation=90)\n",
@@ -285,14 +287,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W roku 2017 przez Kraków (stacja CZERNICHÓW-PROM) przepłynęło 2283965856.00 m^3 wody.\n"
-     ]
+     "data": {
+      "text/plain": "'W roku 2017 przez Kraków (stacja CZERNICHÓW-PROM) przepłynęło 2283965856.00 m^3 wody.'"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -300,82 +303,7 @@
     "czernichow_prom2017 = czernichow_prom[czernichow_prom['Rok hydrologiczny'] == 2017]\n",
     "czernichow_prom2017.set_index(idx for idx, _ in enumerate(czernichow_prom2017['Kod stacji']))\n",
     "mean_flow = czernichow_prom2017['Przepływ [m^3/s]'].mean()\n",
-    "print(f'W roku 2017 przez Kraków (stacja CZERNICHÓW-PROM) przepłynęło {mean_flow*60*60*24*len(czernichow_prom2017[\"Kod stacji\"]):.2f} m^3 wody.')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "fig1 = plt.figure(figsize=(10, 6), dpi=100, facecolor='#ffffff')\n",
-    "plt.plot(\n",
-    "    KRK_BIELANY['Data'],\n",
-    "    KRK_BIELANY['Stan wody [cm]'],\n",
-    ")\n",
-    "plt.title('Poziom wody w Wiśle w latach 2016-2018 (stacja Kraków-Bielany)', fontdict={'fontsize': 18})\n",
-    "plt.ylabel('Poziom wody [cm]', fontdict={'fontsize': 14}, labelpad=30)\n",
-    "plt.xlabel('Data', fontdict={'fontsize': 14}, labelpad=30)\n",
-    "plt.xticks(KRK_BIELANY['Data'][::90], rotation=90)\n",
-    "plt.savefig('output/fig1.png', bbox_inches='tight')\n",
-    "plt.show()\n",
-    "plt.close(fig1)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "fig1 = plt.figure(figsize=(10, 6), dpi=100, facecolor='#ffffff')\n",
-    "plt.plot(\n",
-    "    KRK_BIELANY['Data'],\n",
-    "    KRK_BIELANY['Stan wody [cm]'],\n",
-    ")\n",
-    "plt.title('Poziom wody w Wiśle w latach 2016-2018 (stacja Kraków-Bielany)', fontdict={'fontsize': 18})\n",
-    "plt.ylabel('Poziom wody [cm]', fontdict={'fontsize': 14}, labelpad=30)\n",
-    "plt.xlabel('Data', fontdict={'fontsize': 14}, labelpad=30)\n",
-    "plt.xticks(KRK_BIELANY['Data'][::90], rotation=90)\n",
-    "plt.savefig('output/fig1.png', bbox_inches='tight')\n",
-    "plt.show()\n",
-    "plt.close(fig1)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "fig1 = plt.figure(figsize=(10, 6), dpi=100, facecolor='#ffffff')\n",
-    "plt.plot(\n",
-    "    KRK_BIELANY['Data'],\n",
-    "    KRK_BIELANY['Stan wody [cm]'],\n",
-    ")\n",
-    "plt.title('Poziom wody w Wiśle w latach 2016-2018 (stacja Kraków-Bielany)', fontdict={'fontsize':18})\n",
-    "plt.ylabel('Poziom wody [cm]', fontdict={'fontsize':14}, labelpad=30)\n",
-    "plt.xlabel('Data', fontdict={'fontsize':14}, labelpad=30)\n",
-    "plt.xticks(KRK_BIELANY['Data'][::90], rotation=90)\n",
-    "plt.savefig('output/fig1.png', bbox_inches='tight')\n",
-    "plt.show()\n",
-    "plt.close(fig1)"
+    "f'W roku 2017 przez Kraków (stacja CZERNICHÓW-PROM) przepłynęło {mean_flow * 60 * 60 * 24 * len(czernichow_prom2017[\"Kod stacji\"]):.2f} m^3 wody.'"
    ],
    "metadata": {
     "collapsed": false,
