--- a/main.ipynb
+++ b/main.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import time\n",
@@ -32,17 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "['dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2016\\\\codz_2016_01.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2016\\\\codz_2016_02.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2016\\\\codz_2016_03.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2016\\\\codz_2016_04.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2016\\\\codz_2016_05.zip']"
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "data_dir = 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe'\n",
     "zip_files = glob(f'{data_dir}/*/*.zip')  # list of .zip files\n",
@@ -70,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def unpack(files: list) -> list:\n",
@@ -118,16 +109,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution time: 52.51819729804993 s\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "start_time = time.time()\n",
     "codz_names = (\n",
@@ -185,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def date_creator(df: pd.DataFrame) -> pd.DataFrame:\n",
@@ -210,6 +193,82 @@
     "        ]\n",
     "    )\n",
     "    return df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Definicja funkcji rysującej sformatowany wykres poziomu wody w czasie hydrologicznym na podstawie zadanej tabeli (df)."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def plot_wlevel(station: str):\n",
+    "    \"\"\"Draws formatted plot of water level in time.\"\"\"\n",
+    "\n",
+    "    df = date_creator(DF[station])  # Tabel with data from KRAKÓW-BIELANY station\n",
+    "\n",
+    "    fig = plt.figure(figsize=(10, 4), dpi=300, facecolor='#ffffff')\n",
+    "    plt.plot(\n",
+    "        df['Data hydrologiczna'],\n",
+    "        df['Stan wody [cm]'],\n",
+    "    )\n",
+    "    plt.title(f'Poziom wody w Wiśle w latach hydrologicznych 2016-2018 (stacja {df[\"Nazwa stacji\"][0]})',\n",
+    "              fontdict={'fontsize': 18}, pad=30)\n",
+    "    plt.ylabel('Poziom wody [cm]', fontdict={'fontsize': 14}, labelpad=30)\n",
+    "    plt.xlabel('Data hydrologiczna', fontdict={'fontsize': 14}, labelpad=30)\n",
+    "    plt.xticks(df['Data hydrologiczna'][::90], rotation=90)\n",
+    "    plt.savefig(f'output/fig-{df[\"Nazwa stacji\"][0]}.png', bbox_inches='tight')\n",
+    "    plt.show()\n",
+    "    plt.close(fig)\n",
+    "\n",
+    "\n",
+    "plot_wlevel('KRAKÓW-BIELANY')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Ile wody przepłynęło przez Wisłę w 2017 roku?"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "czernichow_prom = DF['CZERNICHÓW-PROM']\n",
+    "czernichow_prom2017 = czernichow_prom[czernichow_prom['Rok hydrologiczny'] == 2017]\n",
+    "czernichow_prom2017.set_index(idx for idx, _ in enumerate(czernichow_prom2017['Kod stacji']))\n",
+    "mean_flow = czernichow_prom2017['Przepływ [m^3/s]'].mean()\n",
+    "f'W roku 2017 przez Kraków (stacja CZERNICHÓW-PROM) przepłynęło {mean_flow * 60 * 60 * 24 * len(czernichow_prom2017[\"Kod stacji\"]):.2f} m^3 wody.'"
    ],
    "metadata": {
     "collapsed": false,
